--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.13.4",
     "jsonwebtoken": "^9.0.3",
     "lucide-react": "^0.563.0",
+    "pusher-js": "^8.4.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-router-dom": "^7.13.0"
